Fixed a number of things that broke in the recent re-architecture. A number of styling fixes, select all/none, and saving which benchmarks are enabled.
Squashed commit of the following:

commit f6da195f2fc4b73816d21399e4941a2d5e7bd14e
Author: Alex Komoroske <komoroske@google.com>
Date:   Sun Jan 29 22:50:13 2012 -0800

    Select all/none now work again.

commit 97e2360e774f69c1592632570af0ff141902ef3f
Author: Alex Komoroske <komoroske@google.com>
Date:   Sun Jan 29 22:48:04 2012 -0800

    Actually hook up updateHash_ and digestHash_ so the saving behavior works again.

commit 829408781b87514181766f480c836b2408b4e534
Author: Alex Komoroske <komoroske@google.com>
Date:   Sun Jan 29 22:44:21 2012 -0800

    Defined updateHash_ and digestHash_, although they aren't called anywhere.

commit 98647283247da8a73629b10c33e1c0e6a02f2aed
Author: Alex Komoroske <komoroske@google.com>
Date:   Sun Jan 29 22:37:23 2012 -0800

    Get rid of the extra space between rows when they're collapsed

commit 9cb66f787b72f8c20d53a1e933b4ad68e3e607c7
Author: Alex Komoroske <komoroske@google.com>
Date:   Sun Jan 29 22:28:02 2012 -0800

    Added back in the disclosure triangle being the right orientation depending on expanded status

commit cd66546479967ae23925af6f00c40927eef0dd16
Author: Alex Komoroske <komoroske@google.com>
Date:   Sun Jan 29 22:24:59 2012 -0800

    Added back in dimming of summary row when disabled

commit 4ce00b8b0d2650a5fe66e5371c335656ba7693aa
Author: Alex Komoroske <komoroske@google.com>
Date:   Sun Jan 29 22:21:28 2012 -0800

    Added back in the half-transparent styling for disabled benchmarks.

commit 7f0abaa0d217f83b9e89b939f8c1abf32f9cbcd9
Author: Alex Komoroske <komoroske@google.com>
Date:   Sun Jan 29 20:23:38 2012 -0800

    Created benchmark.enabled, which is set when the input is toggled.  This is necessary for future changes to enable saving which benchmarks are enabled.

commit 3347a0ec2d97426146ec00adb8b92ae241901812
Author: Alex Komoroske <komoroske@go

--- a/main.css
+++ b/main.css
@@ -140,14 +140,21 @@ a {
 }
 
 .details > div {
-  display: none;
-}
-
-.details > div.expanded {
-  display: block;
   font-size: 14px;
   border: 1px dotted #FCCF4D;
   background: #FDE7A7;
+}
+
+tr.details td {
+  display: none;
+}
+
+tr.details.expanded td {
+  display: table-cell;
+}
+
+.details > div.disabled {
+  opacity: 0.5;
 }
 
 .runs {
